--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
                     <li>About Me</li>
                 </a>
                 <li>My Project
-                    <ul class="pulldownmenu">
-                        <a href="project1.html">
+                   <ul class="pulldownmenu">
+                        <a href="https://a2-zhexiang.glitch.me/">
                             <li>Project1</li>
                         </a>
-                        <a href="project2.html">
+                        <a href="https://www.youtube.com/channel/UC-3Fw4vzkUwrFKtKcwvfW1w">
                             <li>Project2</li>
                         </a>
                     </ul>
