--- a/aboutme.html
+++ b/aboutme.html
@@ -17,10 +17,10 @@
                 </a>
                 <li>My Project
                     <ul class="pulldownmenu">
-                        <a href="project1.html">
+                        <a href="https://a2-zhexiang.glitch.me/">
                             <li>Project1</li>
                         </a>
-                        <a href="project2.html">
+                        <a href="https://www.youtube.com/channel/UC-3Fw4vzkUwrFKtKcwvfW1w">
                             <li>Project2</li>
                         </a>
                     </ul>
